--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">A LIFETIME'S WORK</a></h1>
+						<h1><a href="index.html">MUHAMAD ARIF BIN HASHIM</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">HOME</a></li>
+											<li><a href="index.html">ABOUT ME</a></li>
 											<li><a href="generic.html">WORK</a></li>
 											<li><a href="elements.html">HOBBIES</a></li>
 											<li><a href="#">Sign Up</a></li>
@@ -41,10 +41,10 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<h2>MUHAMAD ARIF BIN HASHIM</h2>
+							<p>KNOWLEDGE IS NOT WHAT IS MEMORISED.<br />
+							KNOWLEDGE IS WHAT BENEFITS<br />
+							by <a >IMAM SHAFI'I</a>.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button primary">Activate</a></li>
 							</ul>
