--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">MUHAMAD ARIF BIN HASHIM</a></h1>
+						<h1><a href="index.html">MY LIFE STORY by ARIF</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
