--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">ABOUT ME</a></li>
+											<li><a href="index.html">HOME</a></li>
 											<li><a href="generic.html">WORK</a></li>
 											<li><a href="elements.html">HOBBIES</a></li>
 											<li><a href="#">Sign Up</a></li>
